twitter-api/src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitter-service
  labels:
    run: twitter-service
    hystrix.cluster: 'twitter-service'
    hystrix.enabled: 'true'
spec:
  ports:
  - port: 80
    targetPort: 5050
  selector:
    run: twitter-service
